@@ -1,5 +1,5 @@
 /*
- *	$Id: header.h,v 1.2 1999/01/28 20:16:53 mj Exp $
+ *	$Id: header.h,v 1.3 1999/04/26 19:46:02 mj Exp $
  *
  *	The PCI Library -- PCI Header Structure (extracted from <linux/pci.h>)
  *
@@ -80,8 +80,8 @@
 #define  PCI_BASE_ADDRESS_MEM_TYPE_1M	0x02	/* Below 1M */
 #define  PCI_BASE_ADDRESS_MEM_TYPE_64	0x04	/* 64 bit address */
 #define  PCI_BASE_ADDRESS_MEM_PREFETCH	0x08	/* prefetchable? */
-#define  PCI_BASE_ADDRESS_MEM_MASK	(~0x0fUL)
-#define  PCI_BASE_ADDRESS_IO_MASK	(~0x03UL)
+#define  PCI_BASE_ADDRESS_MEM_MASK	(~0x0fL)
+#define  PCI_BASE_ADDRESS_IO_MASK	(~0x03L)
 /* bit 1 is reserved if address_space = 1 */
 
 /* Header type 0 (normal devices) */
